[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/NamedEnemyParamsIdOptionButton.gd" type="Script" id=1]
[ext_resource path="res://UI/HmPresetNoOptionButton.gd" type="Script" id=2]
[ext_resource path="res://UI/EnemyDetailsPanel.gd" type="Script" id=3]
[ext_resource path="res://UI/DropsController.gd" type="Script" id=4]
[ext_resource path="res://UI/DropTableItemsPanel.gd" type="Script" id=5]
[ext_resource path="res://resources/icons/brightmixIconset search.png" type="Texture" id=6]
[ext_resource path="res://resources/icons/icon_clock.png" type="Texture" id=7]
[ext_resource path="res://resources/icons/icon_sun.png" type="Texture" id=8]
[ext_resource path="res://resources/icons/icon_moon.png" type="Texture" id=9]
[ext_resource path="res://resources/icons/icon_gear.png" type="Texture" id=10]

[node name="EnemyDetailsPanel" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1004.0
margin_bottom = 792.0
size_flags_horizontal = 3

[node name="NamedParamsControl" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1004.0
margin_bottom = 56.0

[node name="NamedEnemyParamsFilterLineEdit" type="LineEdit" parent="VBoxContainer/NamedParamsControl"]
margin_right = 1004.0
margin_bottom = 28.0
size_flags_horizontal = 3
clear_button_enabled = true
right_icon = ExtResource( 6 )
placeholder_text = "Filter Names"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/NamedParamsControl"]
margin_top = 32.0
margin_right = 1004.0
margin_bottom = 56.0

[node name="NamedEnemyParamsIdOptionButton" type="OptionButton" parent="VBoxContainer/NamedParamsControl/HBoxContainer"]
margin_right = 976.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="NamedParamResetButton" type="Button" parent="VBoxContainer/NamedParamsControl/HBoxContainer"]
margin_left = 980.0
margin_right = 1004.0
margin_bottom = 24.0
text = "‚Üê"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 1004.0
margin_bottom = 64.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 1004.0
margin_bottom = 556.0
columns = 2

[node name="RaidBossId" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 23.0
text = "RaidBossId"

[node name="RaidBossIdLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_right = 1004.0
margin_bottom = 28.0
hint_tooltip = "RaidBossId_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="Scale" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 55.0
text = "Scale"

[node name="ScaleLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 32.0
margin_right = 1004.0
margin_bottom = 60.0
hint_tooltip = "Scale_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="Level" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 87.0
text = "Level"

[node name="LevelLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 64.0
margin_right = 1004.0
margin_bottom = 92.0
hint_tooltip = "Level_tooltip"
size_flags_horizontal = 3
min_value = 1.0
max_value = 65535.0
value = 1.0
rounded = true

[node name="HmPresetNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 99.0
margin_right = 120.0
margin_bottom = 117.0
text = "HmPresetNo"

[node name="HmPresetNoOptionButton" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 96.0
margin_right = 1004.0
margin_bottom = 120.0
hint_tooltip = "HmPresetNo_tooltip"
size_flags_horizontal = 3
text = "- None -"
items = [ "- None -", null, false, 0, null ]
selected = 0
script = ExtResource( 2 )

[node name="StartThinkTblNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 129.0
margin_right = 120.0
margin_bottom = 147.0
text = "StartThinkTblNo"

[node name="StartThinkTblNoLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 124.0
margin_right = 1004.0
margin_bottom = 152.0
hint_tooltip = "StartThinkTblNo_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="RepopNum" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 161.0
margin_right = 120.0
margin_bottom = 179.0
text = "RepopNum"

[node name="RepopNumLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 156.0
margin_right = 1004.0
margin_bottom = 184.0
hint_tooltip = "RepopNum_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="RepopCount" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 193.0
margin_right = 120.0
margin_bottom = 211.0
text = "RepopCount"

[node name="RepopCountLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 188.0
margin_right = 1004.0
margin_bottom = 216.0
hint_tooltip = "RepopCount_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="EnemyTargetTypesId" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 223.0
margin_right = 120.0
margin_bottom = 241.0
text = "EnemyTargetTypesId"

[node name="EnemyTargetTypesIdLineEdit" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 220.0
margin_right = 1004.0
margin_bottom = 244.0
hint_tooltip = "EnemyTargetTypesId_tooltip"
size_flags_horizontal = 3
text = "None"
items = [ "None", null, false, 1, null, "Rare", null, false, 2, null, "SQ Rare", null, false, 3, null, "Quest Target", null, false, 4, null, "Quest Target SQ Rare", null, false, 5, null, "Area Boss", null, false, 6, null, "Stage Boss", null, false, 7, null ]
selected = 0

[node name="MontageFixNo" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 253.0
margin_right = 120.0
margin_bottom = 271.0
text = "MontageFixNo"

[node name="MontageFixNoLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 248.0
margin_right = 1004.0
margin_bottom = 276.0
hint_tooltip = "MontageFixNo_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="SetType" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 285.0
margin_right = 120.0
margin_bottom = 303.0
text = "SetType"

[node name="SetTypeLineEdit" type="SpinBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 280.0
margin_right = 1004.0
margin_bottom = 308.0
hint_tooltip = "SetType_tooltip"
size_flags_horizontal = 3
max_value = 4.29497e+09
rounded = true

[node name="InfectionType" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 315.0
margin_right = 120.0
margin_bottom = 333.0
text = "InfectionType"

[node name="InfectionTypeLineEdit" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 312.0
margin_right = 1004.0
margin_bottom = 336.0
hint_tooltip = "Set the infection type."
size_flags_horizontal = 3
text = "InfectionType_value_0"
items = [ "InfectionType_value_0", null, false, 0, null, "InfectionType_value_1", null, false, 1, null, "InfectionType_value_2", null, false, 2, null, "InfectionType_value_3", null, false, 3, null ]
selected = 0

[node name="SpawnTimeType" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 343.0
margin_right = 120.0
margin_bottom = 361.0
text = "Spawntime Type"

[node name="SpawnTimeTypeLineEdit" type="OptionButton" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 340.0
margin_right = 1004.0
margin_bottom = 364.0
hint_tooltip = "Define if a monster can spawn at day or night, or both."
text = "Day & Night"
icon = ExtResource( 7 )
items = [ "Day & Night", ExtResource( 7 ), false, 0, null, "Day", ExtResource( 8 ), false, 1, null, "Night", ExtResource( 9 ), false, 2, null, "Custom", ExtResource( 10 ), false, 3, null ]
selected = 0

[node name="CustomTimeType" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_top = 376.0
margin_right = 120.0
margin_bottom = 394.0
text = "Custom Time"

[node name="CustomTimeTypeLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
visible = false
margin_top = 372.0
margin_right = 120.0
margin_bottom = 400.0
hint_tooltip = "Follow the format correctly.
HH:MM,HH:MM"
text = "00:00,23:59"

[node name="IsBossGauge" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_top = 368.0
margin_right = 120.0
margin_bottom = 394.0
hint_tooltip = "IsBossGauge_tooltip"
text = "IsBossGauge"

[node name="IsBossBGM" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 368.0
margin_right = 1004.0
margin_bottom = 394.0
hint_tooltip = "IsBossBGM_tooltip"
text = "IsBossBGM"

[node name="IsManualSet" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_top = 398.0
margin_right = 120.0
margin_bottom = 424.0
hint_tooltip = "IsManualSet_tooltip"
text = "IsManualSet"

[node name="IsAreaBoss" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 398.0
margin_right = 1004.0
margin_bottom = 424.0
hint_tooltip = "IsAreaBoss_tooltip"
text = "IsAreaBoss"

[node name="BloodOrbsContainer" type="HFlowContainer" parent="VBoxContainer/GridContainer"]
margin_top = 428.0
margin_right = 120.0
margin_bottom = 456.0

[node name="DoesDropBO" type="CheckBox" parent="VBoxContainer/GridContainer/BloodOrbsContainer"]
margin_right = 24.0
margin_bottom = 28.0

[node name="BloodOrbsSpinBox" type="SpinBox" parent="VBoxContainer/GridContainer/BloodOrbsContainer"]
margin_left = 28.0
margin_right = 120.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 9999.0
suffix = "BO"

[node name="IsBloodEnemy" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 428.0
margin_right = 1004.0
margin_bottom = 456.0
hint_tooltip = "IsBloodEnemy_tooltip"
text = "Show as BO Enemy"

[node name="HighOrbsContainer" type="HFlowContainer" parent="VBoxContainer/GridContainer"]
margin_top = 460.0
margin_right = 120.0
margin_bottom = 488.0

[node name="DoesDropHO" type="CheckBox" parent="VBoxContainer/GridContainer/HighOrbsContainer"]
margin_right = 24.0
margin_bottom = 28.0

[node name="HighOrbsSpinBox" type="SpinBox" parent="VBoxContainer/GridContainer/HighOrbsContainer"]
margin_left = 28.0
margin_right = 120.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 9999.0
suffix = "HO"

[node name="IsHighOrbEnemy" type="CheckBox" parent="VBoxContainer/GridContainer"]
margin_left = 124.0
margin_top = 460.0
margin_right = 1004.0
margin_bottom = 488.0
hint_tooltip = "IsHighOrbEnemy_tooltip"
text = "Show aw HO Enemy"

[node name="ExpContainer" type="HFlowContainer" parent="VBoxContainer"]
margin_top = 560.0
margin_right = 1004.0
margin_bottom = 588.0
hint_tooltip = "Named Params can affect the experience dropped"

[node name="NamedParamsExpPercentageLabel" type="Label" parent="VBoxContainer/ExpContainer"]
margin_top = 5.0
margin_right = 21.0
margin_bottom = 23.0
text = "100"

[node name="ExpPercentageLabel" type="Label" parent="VBoxContainer/ExpContainer"]
margin_left = 25.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 23.0
text = "% of"

[node name="ExpSpinBox" type="SpinBox" parent="VBoxContainer/ExpContainer"]
margin_left = 54.0
margin_right = 1004.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 4.29497e+09
suffix = "XP"

[node name="PpContainer" type="HFlowContainer" parent="VBoxContainer"]
margin_top = 592.0
margin_right = 1004.0
margin_bottom = 620.0
hint_tooltip = "Named Params can affect the play points dropped"

[node name="NamedParamsPpPercentageLabel" type="Label" parent="VBoxContainer/PpContainer"]
margin_top = 5.0
margin_right = 21.0
margin_bottom = 23.0
text = "100"

[node name="PpPercentageLabel" type="Label" parent="VBoxContainer/PpContainer"]
margin_left = 25.0
margin_top = 5.0
margin_right = 50.0
margin_bottom = 23.0
text = "% of"

[node name="PpSpinBox" type="SpinBox" parent="VBoxContainer/PpContainer"]
margin_left = 54.0
margin_right = 1004.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 4.29497e+09
suffix = "PP"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 624.0
margin_right = 1004.0
margin_bottom = 628.0

[node name="DropsFilterLineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 632.0
margin_right = 1004.0
margin_bottom = 660.0
size_flags_horizontal = 3
clear_button_enabled = true
right_icon = ExtResource( 6 )
placeholder_text = "Filter Tables"
__meta__ = {
"_editor_description_": "Filters the Drops table enemyspawn.Json"
}

[node name="DropsController" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 664.0
margin_right = 1004.0
margin_bottom = 792.0
script = ExtResource( 4 )

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/DropsController"]
margin_right = 1004.0
margin_bottom = 24.0

[node name="DropsTableOptionButton" type="OptionButton" parent="VBoxContainer/DropsController/HFlowContainer"]
margin_right = 958.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "-- No drops --"
items = [ "-- No drops --", null, false, 4096, null ]
selected = 0

[node name="AddDropsTableButton" type="Button" parent="VBoxContainer/DropsController/HFlowContainer"]
margin_left = 962.0
margin_right = 981.0
margin_bottom = 24.0
text = "+"

[node name="RemoveDropsTableButton" type="Button" parent="VBoxContainer/DropsController/HFlowContainer"]
margin_left = 985.0
margin_right = 1004.0
margin_bottom = 24.0
disabled = true
text = "X"

[node name="DropsTableItemsPanel" type="PanelContainer" parent="VBoxContainer/DropsController"]
margin_top = 28.0
margin_right = 1004.0
margin_bottom = 128.0
mouse_filter = 1
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/DropsController/DropsTableItemsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 997.0
margin_bottom = 93.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer"]
margin_right = 990.0
margin_bottom = 86.0

[node name="DropsTableNameLineEdit" type="LineEdit" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer"]
margin_right = 990.0
margin_bottom = 28.0

[node name="DropsTableOptions" type="GridContainer" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 990.0
margin_bottom = 60.0
columns = 2

[node name="DropModelLineLabel" type="Label" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer/DropsTableOptions"]
margin_top = 5.0
margin_right = 493.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Drop Model"

[node name="DropModelSpinBox" type="SpinBox" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer/DropsTableOptions"]
margin_left = 497.0
margin_right = 990.0
margin_bottom = 28.0
size_flags_horizontal = 3
max_value = 255.0

[node name="DropItemsHereLabel" type="Label" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 990.0
margin_bottom = 82.0
mouse_filter = 1
text = "Drop Items Here"
align = 1

[node name="DropItemsContainer" type="VBoxContainer" parent="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 990.0
margin_bottom = 86.0

[connection signal="text_changed" from="VBoxContainer/NamedParamsControl/NamedEnemyParamsFilterLineEdit" to="VBoxContainer/NamedParamsControl/HBoxContainer/NamedEnemyParamsIdOptionButton" method="_on_NamedEnemyParamsFilterLineEdit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/NamedParamsControl/HBoxContainer/NamedEnemyParamsIdOptionButton" to="." method="_on_NamedEnemyParamsIdOptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/NamedParamsControl/HBoxContainer/NamedEnemyParamsIdOptionButton" to="VBoxContainer/NamedParamsControl/HBoxContainer/NamedEnemyParamsIdOptionButton" method="_on_NamedEnemyParamsIdOptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/NamedParamsControl/HBoxContainer/NamedParamResetButton" to="VBoxContainer/NamedParamsControl/HBoxContainer/NamedEnemyParamsIdOptionButton" method="_on_NamedParamResetButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RaidBossIdLineEdit" to="." method="_on_RaidBossIdLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/ScaleLineEdit" to="." method="_on_ScaleLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/LevelLineEdit" to="." method="_on_LevelLineEdit_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/HmPresetNoOptionButton" to="." method="_on_HmPresetNoOptionButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/StartThinkTblNoLineEdit" to="." method="_on_StartThinkTblNoLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RepopNumLineEdit" to="." method="_on_RepopNumLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/RepopCountLineEdit" to="." method="_on_RepopCountLineEdit_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/EnemyTargetTypesIdLineEdit" to="." method="_on_EnemyTargetTypesIdLineEdit_item_selected"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/MontageFixNoLineEdit" to="." method="_on_MontageFixNoLineEdit_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/SetTypeLineEdit" to="." method="_on_SetTypeLineEdit_value_changed"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/InfectionTypeLineEdit" to="." method="_on_InfectionTypeLineEdit_item_selected"]
[connection signal="item_selected" from="VBoxContainer/GridContainer/SpawnTimeTypeLineEdit" to="." method="_on_SpawnTimeTypeLineEdit_item_selected"]
[connection signal="text_changed" from="VBoxContainer/GridContainer/CustomTimeTypeLineEdit" to="." method="_on_CustomTimeTypeLineEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsBossGauge" to="." method="_on_IsBossGauge_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsBossBGM" to="." method="_on_IsBossBGM_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsManualSet" to="." method="_on_IsManualSet_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsAreaBoss" to="." method="_on_IsAreaBoss_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/BloodOrbsContainer/DoesDropBO" to="." method="_on_DoesDropBO_pressed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/BloodOrbsContainer/BloodOrbsSpinBox" to="." method="_on_BloodOrbsSpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsBloodEnemy" to="." method="_on_IsBloodEnemy_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/HighOrbsContainer/DoesDropHO" to="." method="_on_DoesDropHO_pressed"]
[connection signal="value_changed" from="VBoxContainer/GridContainer/HighOrbsContainer/HighOrbsSpinBox" to="." method="_on_HighOrbsSpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/IsHighOrbEnemy" to="." method="_on_IsHighOrbEnemy_pressed"]
[connection signal="value_changed" from="VBoxContainer/ExpContainer/ExpSpinBox" to="." method="_on_ExpSpinBox_value_changed"]
[connection signal="changed" from="VBoxContainer/PpContainer/PpSpinBox" to="." method="_on_PpSpinBox_changed"]
[connection signal="focus_entered" from="VBoxContainer/PpContainer/PpSpinBox" to="." method="_on_PpSpinBox_focus_entered"]
[connection signal="value_changed" from="VBoxContainer/PpContainer/PpSpinBox" to="." method="_on_PpSpinBox_value_changed"]
[connection signal="text_changed" from="VBoxContainer/DropsFilterLineEdit" to="VBoxContainer/DropsController" method="_on_DropsFilterLineEdit_text_changed"]
[connection signal="drops_table_selected" from="VBoxContainer/DropsController" to="." method="_on_DropsContainer_drops_table_selected"]
[connection signal="item_selected" from="VBoxContainer/DropsController/HFlowContainer/DropsTableOptionButton" to="VBoxContainer/DropsController" method="_on_DropsTableOptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/DropsController/HFlowContainer/AddDropsTableButton" to="VBoxContainer/DropsController" method="_on_AddDropsTableButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DropsController/HFlowContainer/RemoveDropsTableButton" to="VBoxContainer/DropsController" method="_on_RemoveDropsTableButton_pressed"]
[connection signal="dropped_item" from="VBoxContainer/DropsController/DropsTableItemsPanel" to="VBoxContainer/DropsController" method="_on_DropsTableItemsPanel_dropped_item"]
[connection signal="text_changed" from="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer/DropsTableNameLineEdit" to="VBoxContainer/DropsController" method="_on_DropsTableNameLineEdit_text_changed"]
[connection signal="value_changed" from="VBoxContainer/DropsController/DropsTableItemsPanel/MarginContainer/VBoxContainer/DropsTableOptions/DropModelSpinBox" to="VBoxContainer/DropsController" method="_on_DropModelSpinBox_value_changed"]
